# ci-platform

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum  nginx-proxy.conf  test-api.sh
.ci/workflows/: build.yml
control-plane/: Dockerfile
control-plane/cmd/devtest/: main.go
control-plane/cmd/server/: main.go
control-plane/examples/repo/: main.go  main_test.go
control-plane/examples/repo/.ci/workflows/: build.yml
control-plane/examples/repo/artifacts/: build-info.txt  coverage.out  demo-binary  test-report.txt
control-plane/internal/api/: main.go
control-plane/internal/httpapi/: server.go  webhooks.go
control-plane/internal/logstream/: hub.go
control-plane/internal/queue/: consumer.go
control-plane/internal/runnergrpc/: server.go
control-plane/internal/storage/: minio.go
control-plane/internal/store/: store.go
control-plane/internal/store/pgstore/: pgstore.go
control-plane/internal/workflow/: parser.go
control-plane/migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql
control-plane/proto/: runner.proto
control-plane/proto/runnerpb/: runner.pb.go  runner_grpc.pb.go
dashboard/: Dockerfile  nginx.conf  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js
dashboard/src/components/: RunDetail.js  RunsList.js
runner/: Cargo.toml  Dockerfile  build.rs
runner/cmd/: main.go
runner/src/: main.rs
web/: package-lock.json
web/src/: App.css
web/src/components/: JobDetail.js  RunDetail.js  RunList.js
