[package]
name = "ci-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"  
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
bollard = "0.17"
futures = "0.3" # for stream handling


[build-dependencies]
tonic-build = "0.10"